--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         </ul>
       </div>
     </main>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
